[package]
name = "beneficiary-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-05-29T08:32:43.636363

// patch: 2026-05-30T00:54:32.727272

// patch: 2026-06-07T05:16:21.818180

// patch: 2026-06-07T21:38:10.909089

// patch: 2026-06-08T13:59:59.999998

// patch: 2026-06-10T15:05:27.272725

// patch: 2026-06-19T11:49:05.454542
