[package]
name = "fraud-challenge"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-06-05T20:32:43.636362

// patch: 2026-06-12T16:10:54.545452

// patch: 2026-06-18T19:27:16.363633
